--- a/DevFolio/index.html
+++ b/DevFolio/index.html
@@ -172,10 +172,10 @@
           <div class="col-sm-12">
             <div class="title-box text-center">
               <h3 class="title-a">
-                Services
+                Skills
               </h3>
               <p class="subtitle-a">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                More about what I can do.
               </p>
               <div class="line-mf"></div>
             </div>
@@ -284,7 +284,7 @@
           <div class="col-sm-3 col-lg-3">
             <div class="counter-box counter-box pt-4 pt-md-0">
               <div class="counter-ico">
-                <span class="ico-circle"><i class="bi bi-check"></i></span>
+                <!-- <span class="ico-circle"><i class="bi bi-check"></i></span>
               </div>
               <div class="counter-num">
                 <p data-purecounter-start="0" data-purecounter-end="450" data-purecounter-duration="1" class="counter purecounter"></p>
@@ -321,7 +321,7 @@
               </div>
               <div class="counter-num">
                 <p data-purecounter-start="0" data-purecounter-end="48" data-purecounter-duration="1" class="counter purecounter"></p>
-                <span class="counter-text">AWARD WON</span>
+                <span class="counter-text">AWARD WON</span> -->
               </div>
             </div>
           </div>
@@ -339,7 +339,7 @@
                 Portfolio
               </h3>
               <p class="subtitle-a">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                A selection from some of my best work.
               </p>
               <div class="line-mf"></div>
             </div>
@@ -547,7 +547,7 @@
     </div><!-- End Testimonials Section -->
 
     <!-- ======= Blog Section ======= -->
-    <section id="blog" class="blog-mf sect-pt4 route">
+    <!-- <section id="blog" class="blog-mf sect-pt4 route">
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
@@ -658,7 +658,7 @@
           </div>
         </div>
       </div>
-    </section><!-- End Blog Section -->
+    </section>End Blog Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(assets/img/overlay-bg.jpg)">
@@ -672,11 +672,11 @@
                   <div class="col-md-6">
                     <div class="title-box-2">
                       <h5 class="title-left">
-                        Send Message Us
+                        Thanks for visiting.
                       </h5>
                     </div>
                     <div>
-                      <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                      <!-- <form action="forms/contact.php" method="post" role="form" class="php-email-form">
                         <div class="row">
                           <div class="col-md-12 mb-3">
                             <div class="form-group">
@@ -707,7 +707,8 @@
                             <button type="submit" class="button button-a button-big button-rouded">Send Message</button>
                           </div>
                         </div>
-                      </form>
+                      </form> -->
+                      <img src="assets/img/passport-size-photo.jpeg" alt="" class="img-fluid"/>
                     </div>
                   </div>
                   <div class="col-md-6">
@@ -718,15 +719,15 @@
                     </div>
                     <div class="more-info">
                       <p class="lead">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorum dolorem soluta quidem
-                        expedita aperiam aliquid at.
-                        Totam magni ipsum suscipit amet? Autem nemo esse laboriosam ratione nobis
-                        mollitia inventore?
+                        Thank you for taking the time to get to know me and my work
+                        better. If I can help you with your next project, please
+                        reach out and I'll respond right away. I look forward
+                        to working with you!
                       </p>
                       <ul class="list-ico">
-                        <li><span class="bi bi-geo-alt"></span> 329 WASHINGTON ST BOSTON, MA 02108</li>
-                        <li><span class="bi bi-phone"></span> (617) 557-0089</li>
-                        <li><span class="bi bi-envelope"></span> contact@example.com</li>
+                        <!-- <li><span class="bi bi-geo-alt"></span> 329 WASHINGTON ST BOSTON, MA 02108</li>
+                        <li><span class="bi bi-phone"></span> (617) 557-0089</li> -->
+                        <li><span class="bi bi-envelope"></span> leenabisht8@gmail.com</li>
                       </ul>
                     </div>
                     <div class="socials">
